<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/robot_is_connected_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/robot_info_connected" />

        <TextView
            android:id="@+id/robot_is_connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/robot_is_connected_label"
            android:layout_alignTop="@id/robot_is_connected_label"
            />

        <TextView
            android:id="@+id/robot_ip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/robot_is_connected_label"
            android:text="@string/robot_info_ip" />

        <TextView
            android:id="@+id/robot_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/robot_ip_label" 
            android:layout_alignTop="@id/robot_ip_label"/>

        <TextView
            android:id="@+id/robot_has_grabber_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/robot_ip_label"
            android:text="@string/robot_info_grabber" />

        <TextView
            android:id="@+id/robot_has_grabber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/robot_has_grabber_label" 
            android:layout_alignTop="@id/robot_has_grabber_label"/>
    </RelativeLayout>

</merge>